# tts-client

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: __init__.py  logger.py  settings.py
data/: azure_voices.json  volc_voices.json
models/: schemas.py
routers/: __init__.py  channels.py  tts.py
services/: __init__.py  channel_service.py  tts_service.py
services/providers/: __init__.py  azure_provider.py  base.py  edge_provider.py  nami_provider.py  openai_provider.py  volcengine_provider.py
static/js/: app.js
templates/: index.html
test/: test_api.py
