[project]
name = "tts-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "edge-tts>=6.1.9",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
]
[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
